@@ -6,6 +6,7 @@ group "Elm_Config" struct {
   value "thumbscroll_threshold" int: 24;
   value "thumbscroll_hold_threshold" int: 100;
   value "thumbscroll_momentum_threshold" double: 100.0;
+  value "thumbscroll_flick_distance_tolerance" int: 1000;
   value "thumbscroll_friction" double: 1.0;
   value "thumbscroll_min_friction" double: 0.3;
   value "thumbscroll_friction_standard" double: 3000.0;
