@@ -342,6 +342,7 @@ _desc_init(void)
    ELM_CONFIG_VAL(D, T, thumbscroll_threshold, T_INT);
    ELM_CONFIG_VAL(D, T, thumbscroll_hold_threshold, T_INT);
    ELM_CONFIG_VAL(D, T, thumbscroll_momentum_threshold, T_DOUBLE);
+   ELM_CONFIG_VAL(D, T, thumbscroll_flick_distance_tolerance, T_INT);
    ELM_CONFIG_VAL(D, T, thumbscroll_friction, T_DOUBLE);
    ELM_CONFIG_VAL(D, T, thumbscroll_min_friction, T_DOUBLE);
    ELM_CONFIG_VAL(D, T, thumbscroll_friction_standard, T_DOUBLE);
@@ -1085,6 +1086,7 @@ _config_load(void)
    _elm_config->thumbscroll_threshold = 24;
    _elm_config->thumbscroll_hold_threshold = 24;
    _elm_config->thumbscroll_momentum_threshold = 100.0;
+   _elm_config->thumbscroll_flick_distance_tolerance = 1000;
    _elm_config->thumbscroll_friction = 1.0;
    _elm_config->thumbscroll_min_friction = 0.5;
    _elm_config->thumbscroll_friction_standard = 1000.0;
@@ -1507,6 +1509,8 @@ _env_get(void)
    // FIXME: floatformat locale issues here 1.0 vs 1,0 - should just be 1.0
    s = getenv("ELM_THUMBSCROLL_MOMENTUM_THRESHOLD");
    if (s) _elm_config->thumbscroll_momentum_threshold = _elm_atof(s);
+   s = getenv("ELM_THUMBSCROLL_FLICK_DISTANCE_TOLERANCE");
+   if (s) _elm_config->thumbscroll_flick_distance_tolerance = atoi(s);
    s = getenv("ELM_THUMBSCROLL_FRICTION");
    if (s) _elm_config->thumbscroll_friction = _elm_atof(s);
    s = getenv("ELM_THUMBSCROLL_MIN_FRICTION");
@@ -2180,6 +2184,18 @@ EAPI void
 elm_config_scroll_thumbscroll_momentum_threshold_set(double threshold)
 {
    _elm_config->thumbscroll_momentum_threshold = threshold;
+}
+
+EAPI unsigned int
+elm_config_scroll_thumbscroll_flick_distance_tolerance_get(void)
+{
+   return _elm_config->thumbscroll_flick_distance_tolerance;
+}
+
+EAPI void
+elm_config_scroll_thumbscroll_flick_distance_tolerance_set(unsigned int distance)
+{
+   _elm_config->thumbscroll_flick_distance_tolerance = distance;
 }
 
 EAPI double
