@@ -78,6 +78,7 @@ Additions:
    * Add elm_fileselector_mime_type_filter_append and elm_fileselector_filters_clear to support mime type filter.
    * Add the elm_scrollable_interface_content_viewport_resize_cb_set.
    * added callback call "scroll", "scroll,anim,start", "scroll,anim,stop", "scroll,drag,start", "scroll,drag,stop" in toolar widget.
+   * Add the configuration thumbscroll_flick_distance_tolerance.
 
 Improvements:
 
@@ -119,6 +120,7 @@ Improvements:
    * Support language change for widget items (Ctxpopup, Hoversel, Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup, MultibuttonEntry)
    * Move cursor when mouse moves with longpress.
    * Show magnifier when selection handlers are pressed or moved.
+   * Change the method to calculate a distance which be scrolled from linear to sine curve.
 
 Fixes:
    * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
